tests/sources/invalid/for_missing_range.minipl
for x in 10 do
end for;